sample_flows/FillThoseContactRoles/force-app/main/default/objects/SalesTeamPolicy__c/SalesTeamPolicy__c.object-meta.xml
<CustomObject>
    <label>SalesTeamPolicy</label>
    <nameField>
        <label>SalesTeamPolicy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SalesTeamPolicies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>