sample_flows/FillThoseContactRoles/force-app/main/default/objects/SalesTeamPolicy__c/fields/OpportunityContactRoleReminderInterval__c.field-meta.xml
<CustomField>
    <fullName>OpportunityContactRoleReminderInterval__c</fullName>
    <label>OCR Reminder Interval (Days)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>