sample_flows/FillThoseContactRoles/force-app/main/default/objects/SalesTeamPolicy__c/fields/Policy_Decider_User__c.field-meta.xml
<CustomField>
    <fullName>Policy_Decider_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Policy Decider (User)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SalesTeamPolicies</relationshipName>
    <type>Lookup</type>
</CustomField>