sample_flows/FillThoseContactRoles/force-app/main/default/objects/SalesTeamPolicy__c/fields/RequiredContactRole_Decision_Maker__c.field-meta.xml
<CustomField>
    <fullName>RequiredContactRole_Decision_Maker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RequiredContactRole - Decision Maker</label>
    <type>Checkbox</type>
</CustomField>